# Cup-handle

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.py  streamlit_app.py
.streamlit/: config.toml
pattern_quant/: __init__.py
pattern_quant/core/: __init__.py  backtest_engine.py  cup_detector.py  extrema_detector.py  handle_detector.py  models.py  pattern_engine.py  score_calculator.py  signal_generator.py  trend_filter.py
pattern_quant/data/: __init__.py  data_source.py  ingestion_service.py  yfinance_source.py
pattern_quant/db/: __init__.py  repository.py  schema.py  state_manager.py  state_schema.py
pattern_quant/engine/: __init__.py
pattern_quant/evolution/: __init__.py  crossover.py  engine.py  exceptions.py  fitness.py  generation.py  models.py  mutation.py  population.py  selection.py  walk_forward.py
pattern_quant/optimization/: __init__.py  auto_tuner.py  factor_config.py  gpu_accelerator.py  indicator_pool.py  models.py  signal_optimizer.py
pattern_quant/risk/: __init__.py  risk_manager.py
pattern_quant/strategy/: __init__.py  config.py  dual_engine.py  market_classifier.py  mean_reversion_strategy.py  models.py  position_sizer.py  signal_resolver.py  trend_strategy.py
pattern_quant/ui/: __init__.py  app.py  chart_view.py  dashboard.py  (+6 more)
tests/: __init__.py  check_syntax.py  test_core_algorithms.py  test_dual_engine_integration.py  test_evolution_models.py  test_indicator_pool.py  test_market_classifier.py  test_mean_reversion_strategy.py  test_position_sizer.py  test_signal_resolver.py  test_trend_strategy.py
